# narvie

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clean  data_memory_iCE40UP5K.v  demo.yml  diamond-config.xcf  module-list.sh  prog  progMDP  rv32i_ice40.pcf  rv32i_ice40MDP.pcf  sim  sim_uart  top.v  top_sim.cpp  top_sim.v  top_uart_testbed.v
.github/: dependabot.yml
ci/: before-install.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/src/lib/: immediate.rs  instruction.rs  register.rs
docs/: MDP pinout
documentation/: .gitignore  implementation-cost.md  processor.md  refs.bib  repl.md  report.tex  timing-diagram.json5
narvie-cli/: Cargo.toml
narvie-cli/src/: main.rs
narvie-processor/: Cargo.toml  build.rs
narvie-processor/narvie-verilog/: top.v
narvie-processor/simulator-src/: lib.rs  main.cpp  main.rs  testbench.c  testbench.cpp  testbench.h  uartsim-backup.cpp  uartsim.c  uartsim.h
narvie-verilog/: cpu.v  main.v  uart_regfile.v
processor/: .gitignore  Cargo.toml  build.rs  rv32i_ice40MDP.pcf
processor/narvie-verilog/: data_memory_iCE40UP5K.v  rx_instruction.v
processor/simulator-src/: lib.rs  main.cpp  testbench.c  testbench.cpp  testbench.h  top_sim.v  uartsim.cpp  uartsim.h
program/: .gitignore  Makefile  getprog  init.s  led.c  objdump  script.ld  uart_print.c  uart_print.h
program/srec_decoder/: .gitignore  srec_decode.c
repl/: .gitignore  Cargo.toml  Makefile  assemble.js  config.js  eval-instruction.js  eval-instruction.mock.js  index.js  instructionSet.js  package-lock.json  package.json  serialport  serialport.js  serialport.mock.js
repl/src/: main.rs
repl/src/lib/: immediate.rs  instruction.rs  mod.rs  register.rs
rust-repl/: Cargo.toml
rust-repl/src/: main.rs
simulation/: a.out  adder_sim.v  alu_sim  alu_sim.v  data.hex  data_memory.v  instruction_mem.v  program.hex
submodule/: config.vlt
submodule/simulation/: adder.vcd  adder_sim  data.hex  data_memory.v  instruction_mem.v  program.hex
submodule/uart/: uart_tx.v
submodule/verilog/: CSR.v  branch_decide.v  branch_predictor.v  cpu.v  data.hex  data_memory_iCE40UP5K.v  forwarding_unit.v  imm_gen.v  program.hex  program_counter.v
testbench/: .gitignore  Cargo.toml  Makefile  build.rs  build.sh  main.cpp  testbench.cpp  testbench.h  top_sim.v  uartsim.cpp  uartsim.h
testbench/src/: main.rs
uart/: rx_instruction.v  tx_regfile.v  uart_tx.v
verilog/: CSR_iCE40UP5K.v  adder.v  alu.v  alu_control.v  branch_decide.v  branch_predictor.v  control_unit.v  cpu.v  dataMem_mask_gen.v  data_memory.v  data_memory_iCE40UP5K.v  forwarding_unit.v  imm_gen.v  instruction_mem.v  main.v  mux2to1.v  pipeline_registers.v  program.hex  program_counter.v  program_original.hex  program_sim.hex  register_file.v  register_file_iCE40UP5K.v  uart_instruction.v  uart_regfile.v
(+6 files in other folders)
