[package]
name = "narvie-cli"
version = "0.3.4"
authors = ["Harry Sarson <harry.sarson@hotmail.co.uk>"]
description = "A CLI for the narvie REPL"
license = "GPL-3.0"
readme = "../README.md"
homepage = "https://github.com/physical-computation/narvie"
repository = "https://github.com/physical-computation/narvie"
keywords = ["cli", "RISC-V", "narvie", "repl", "physical-computation"]
categories = ["command-line-utilities", "hardware-support", "science"]


[dependencies]
clap = "2.33.0"
rustyline = "4.1.0"
directories = "2.0.1"
log = "0.4.6"
env_logger = "0.6.1"
prettytable-rs = "0.8.0"
byteorder = "1.3.1"
serialport = "3.2.0"
time = "0.1"
narvie-processor = { path = "../processor", version = "0.3.3" }
